@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.m3_online_database" name="M3 Online (Adatbázis)" version="1.0.1" provider-name="heg, vargalex">
+<addon id="plugin.video.m3_online_database" name="M3 Online (Adatbázis)" version="1.0.2" provider-name="heg, vargalex">
     <requires>
         <import addon="script.module.beautifulsoup4" version="4.6.2"/>
         <import addon="script.module.requests" version="2.22.0"/>
@@ -17,7 +17,7 @@
         <language>hu</language>
         <platform>all</platform>
         <news> 
-            1.0.1 - Lapozás megvalósításának megkezdése
+            1.0.2 - Közvetlen CSV forrás használata json helyett
         </news>
         <assets>
             <icon>icon.png</icon>
